--- a/signup.html
+++ b/signup.html
@@ -77,7 +77,7 @@ input[type=submit]:hover {
         <head>
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
                 <link rel="stylesheet" href="/styles.css" />
-                <title>About</title>
+                <title>Sign up for QUICKSNAP</title>
         </head>
 
         <nav style="background-color: ##EC7063;" class="navbar navbar-expand-lg navbar-light bg-light">
