used an api on signup.html, created script.js and styles.css

--- a/home.html
+++ b/home.html
@@ -1,40 +1,8 @@
 <!DOCTYPE hmtl>
-<style>
-
-.header {
-        padding: 5px;
-        text-align: center;
-        background: #EC7063;
-        color: white;
-        font-size: 40px;
-}
-
-.footer {
-        padding: 2px;
-        text-align: left;
-        background: #EC7063;
-        color: white;
-        font-size: 10px;
-        padding-left: 20px;
-}
-
-.bg-dark {
-  background-color: #EC7063 !important;
-}
-
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: #EC7063;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: #EC7063;
-}
-
-</style>
 <body>
 	<head>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="/styles.css" />
+	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="styles.css" />
 		<title>QUICKSNAP</title>
 	</head>
 	
@@ -63,8 +31,11 @@
 		<p>QUICKSNAP</p>
 	</div>
 	
+	<br/>
 	<p>Quicksnap is a website where you can keep your images and write your memories about the images. It is a personal journal site that will save your stories and timeless images.</p>
-	<p>Below you will see an example of a few images from the creator of this website.
+	<p>Below you will see an example of a few images from the creator of this website.</p>
+	
+	<br/>
 
 	<table style="border-collapse: collapse; width: 100%;" border="0">
 		<tbody>
@@ -75,14 +46,15 @@
 			</tr>
 		</tbody>
 	</table>
-
+	
+	<br/>
 	<div class="footer">
 		<p><a href="https://github.com/madelynjohnsonnn/260cp1.git">GITHUB LINK</a></p>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
 </html>
