--- a/image2.html
+++ b/image2.html
@@ -1,45 +1,8 @@
-<!DOCTYPE hmtl>
-<style>
-
-.header {
-        padding: 5px;
-        text-align: center;
-        background: #EC7063;
-        color: white;
-        font-size: 40px;
-}
-
-.footer {
-        display:block;
-        padding: 2px;
-        text-align: left;
-        background: #EC7063;
-        color: white;
-        font-size: 10px;
-        padding-left: 20px;
-}
-
-img {
-  display:block;
-}
-
-.bg-dark {
-  background-color: #EC7063 !important;
-}
-
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: #EC7063;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: #EC7063;
-}
-
-</style>
+<!DOCTYPE html>
 <body>
         <head>
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-                <link rel="stylesheet" href="/styles.css" />
+                <link rel="stylesheet" href="styles.css" />
                 <title>QUICKSNAP - Madelyn Johnson</title>
         </head>
 
