--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <title>About QUICKSNAP</title>
         </head>
 
-        <nav style="background-color: ##EC7063;" class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav style="background-color: #EC7063;" class="navbar navbar-expand-lg navbar-light bg-light">
 <a class="navbar-brand" href="#">QUICKSNAP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -46,13 +46,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/home.html">Home</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/home.html">Home</a>
       </li>
 	<li class="nav-item active">
         <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-<a class="nav-link" href="http://madelynjohnson.xyz/lab2/signup.html">Sign up for Free!</a>
+<a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/signup.html">Sign up for Free!</a>
       </li>
     </ul>
   </div>
