--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/about.html">About</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/about.html">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/signup.html">Sign up for Free!</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/signup.html">Sign up for Free!</a>
       </li>
     </ul>
   </div>
