--- a/image1.html
+++ b/image1.html
@@ -15,13 +15,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
 <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/home.html">Home</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/home.html">Home</a>
       </li>
 	    <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/about.html">About</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/about.html">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/signup.html">Sign up for Free!</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/signup.html">Sign up for Free!</a>
       </li>
     </ul>
   </div>
