--- a/submission2.html
+++ b/submission2.html
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/home.html">Home</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/home.html">Home</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="http://madelynjohnson.xyz/lab2/about.html">About</a>
+        <a class="nav-link" href="http://madelynjohnson.xyz/lab2quicksnap/about.html">About</a>
         </li>
         <li class="nav-item active">
         <a class="nav-link" href="#">Sign up for Free!<span class="sr-only">(current)</span></a>
@@ -37,7 +37,7 @@
         <div id="sampleImages">
         </div>
 
-        <p><a href="http://madelynjohnson.xyz/lab2/home.html">Back to home page</a></p>
+        <p><a href="http://madelynjohnson.xyz/lab2quicksnap/home.html">Back to home page</a></p>
         
 
         <!-- <div id="sampleResults">
